--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dom": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-router-dom": "^6.22.2",
     "router": "^1.3.8"
   },
