--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
     "dom": "^0.0.3",
+    "jodit-react": "^4.0.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "router": "^1.3.8"
   },
