--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
+    "axios": "^1.6.8",
     "dom": "^0.0.3",
+    "dotenv": "^16.4.5",
     "jodit-react": "^4.0.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
