--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
+    "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "dom": "^0.0.3",
     "dotenv": "^16.4.5",
@@ -19,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "router": "^1.3.8"
   },
