--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
+    "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
     "dom": "^0.0.3",
     "jodit-react": "^4.0.15",
     "react": "^18.2.0",
