created project upload model, controller and route

--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,3 +1,7 @@
 PORT=3000
 CORS_ORIGIN=*
 MONGO_URI="mongodb+srv://nandedkarnimish12:5KYWrEvXUPcM53nW@bitinternship.0yhfmet.mongodb.net"
+
+CLOUDINARY_CLOUD_NAME='myfirstcloudinary2107'
+CLOUDINARY_API_KEY='339298468411897'
+CLOUDINARY_API_SECRET='AyK6OY65sBB8JBrqhGL2WgmW1Q0'
