--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "dom": "^0.0.3",
     "dotenv": "^16.4.5",
     "jodit-react": "^4.0.15",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
+    "redux-persist": "^6.0.0",
     "router": "^1.3.8"
   },
   "devDependencies": {
@@ -35,6 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "vite-plugin-node-polyfills": "^0.21.0"
   }
 }
