--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.8",
     "dom": "^0.0.3",
     "dotenv": "^16.4.5",
+    "html-react-parser": "^5.1.10",
     "jodit-react": "^4.0.15",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
